enhance run editor, #6, enhance cards classes next, enhance create tc json ignore objects and mapp it once open the test run. then add test run details items, then implelement duration.